# Advent_of_Code

./: .editorconfig  .gitignore  LICENSE  LICENSE.txt  R.Rproj  README.md  aoc.py  mypy.ini  new.py  prepare.py  pyproject.toml  requirements.txt  test.py
2018/: day_01.py  day_02.py  day_03.py  day_04.R
2019/: day_01.py  day_02.py  day_03.py  day_04.R  day_04.py  day_05.py  day_06.py  day_07.py  day_08.R  day_08.py  day_09.py  day_10.py  day_11.py  day_12.R  day_13.py  day_14.py  day_15.py  day_16.R  day_17.py  day_18.py  day_19.py  day_20.py  day_20_sample.txt  day_21.py  day_22.py  intcode.py  intcode_test.py
2020/: Day15.java  day_01.R  day_01.py  day_02.R  day_02.py  day_03.R  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.R  day_15.py  day_16.py  day_17.py  day_18.py  day_18_sample.txt  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  test_2020.py
2021/: day_01.py  day_02.py  day_03.py  day_04.py  test_2021.py
Python/: README.md  aoc.py  mypy.ini  prepare.py  requirements.txt  test.py
R/: R.Rproj
R/2018/: day04.R
input/: 2019-03-sample.txt  2019-07-sample.txt  2019-22-sample.txt  2020-07-sample.txt  2020-10-sample.txt  2020-14-sample.txt  2020-19-sample.txt  2021-12-sample.txt  2021-16-sample.txt  2021-22-sample.txt
java/: .sdkmanrc  README.md  build.gradle.kts  lombok.config  settings.gradle.kts
jvm/: README.md  build.gradle.kts  settings.gradle.kts
python/: README.md  aoc.py  prepare.py  pyproject.toml  requirements.txt  test.py
(+437 files in other folders)
