[tool.poetry]
name = "advent-of-code"
version = "1.0"
description = ""
authors = ["Farbfetzen <farbfetzen@posteo.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "3.7.1"
numpy = "1.24.3"
pygame = "2.4.0"
sympy = "1.12"

[tool.poetry.group.dev.dependencies]
mypy = "1.3.0"
parameterized = "0.9.0"
requests = "2.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
