[tool.poetry]
name = "advent-of-code"
version = "1.0"
description = ""
authors = ["Farbfetzen <farbfetzen@posteo.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
# Limit python version because numpy 1.26.0 requires Python <3.13,>=3.9.
python = ">=3.10,<3.13"
matplotlib = "3.8.0"
numpy = "1.26.0"
pygame = "2.5.2"
sympy = "1.12"

[tool.poetry.group.dev.dependencies]
mypy = "1.5.1"
parameterized = "0.9.0"
requests = "2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
